# ch57x-hal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  build.rs  errors.txt  learnings.md  memory.x  plan.md  progress.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ch572ds1-mapping.md
examples/: adc_pin.rs  adc_temp.rs  ble-blinky.rs  ble-broadcaster.rs  ble-led-button.rs  ble-peripheral.rs  ble-scanner.rs  blinky.rs  embassy-blinky.rs  embassy-gpio.rs  empty.rs  flashisp.rs  hardfault.rs  serial.rs  spi-ssd1306.rs  uart-echo.rs  yd-ch582m.rs
src/: adc.rs  delay.rs  dma.rs  gpio.rs  i2c.rs  interrupt.rs  isp.rs  lcd.rs  lib.rs  peripheral.rs  peripherals.rs  prelude.rs  rtc.rs  signature.rs  spi.rs  sysctl.rs  systick.rs  timer.rs  uart.rs
src/ble/: ffi.rs  gap.rs  gapbondmgr.rs  gatt.rs  gatt_uuid.rs  gattservapp.rs  linkdb.rs  mod.rs
src/embassy/: mod.rs  time_driver_systick.rs
